# diamond_app

./: Diamond_App_Customer.ipynb  Docker_Commands.txt  Dockerfile  WebService_Commands.txt  deployment.yaml  ml_framework-0.1.0-py3-none-any.whl  ping.py  pong.py  predict_diamond_cut.py  predict_diamond_cut_test.py  pyproject.toml  service.yaml
Diagram/: WebServiceApp_Diagramm.drawio
Stored_Models/: ANN_TF_ClassifierSavedModel.keras  ANN_TF_RegressorSavedModel.keras  XGBoostRegressorSavedModel
